--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="table">Table</string>
     <string name="save">Save</string>
     <string name="insert">Insert</string>
-    <string name="delete" translatable="false">Delete</string>
+    <string name="delete">Delete</string>
     <string name="add">Add</string>
     <string name="edit">Edit</string>
     <string name="home">Home</string>
@@ -13,8 +13,8 @@
     <string name="use_gps">Use GPS position</string>
     <string name="drawl_gps">Draw line (auto)</string>
     <string name="drawp_gps">Draw polygon (auto)</string>
-    <string name="drawlm_gps" translatable="false">Draw line (manual)</string>
-    <string name="drawpm_gps" translatable="false">Draw polygon(manual)</string>
+    <string name="drawlm_gps">Draw line (manual)</string>
+    <string name="drawpm_gps">Draw polygon(manual)</string>
     <string name="cancel">Cancel</string>
     <string name="image">Image</string>
     <string name="import_success">Import success</string>
@@ -56,61 +56,42 @@
     <string name="no_gps">No GPS position</string>
     <string name="gps_track">GPS Track</string>
     <string name="view_feature">View feature</string>
-    <string name="about_intro" translatable="false">Your are using the MapMint4ME application. It is provided free of charge under the term of the MIT/X11 License and aims to provide an easy to use editing tool for your own data on the field.</string>
-    <string name="about_property" translatable="false">The software has been developped and published on GooglePlay™ by GeoLabs SARL.</string>
-    <string name="about_howtosetup" translatable="false">In case you want to learn how to use this application, please click</string>
-    <string name="about_howtosetup_link" translatable="false">here</string>
-    <string name="settings" translatable="false">Settings for</string>
-    <string name="insert_success" translatable="false">Successfully recorded</string>
-    <string name="update_success" translatable="false">Successfully updated</string>
-    <string name="title" translatable="false">MapMint4ME</string>
-    <string name="description" translatable="false">Import, Edit, Export</string>
+    <string name="about_intro">Your are using the MapMint4ME application. It is provided free of charge under the term of the MIT/X11 License and aims to provide an easy to use editing tool for your own data on the field.</string>
+    <string name="about_property">The software has been developped and published on GooglePlay™ by GeoLabs SARL.</string>
+    <string name="about_howtosetup">In case you want to learn how to use this application, please click</string>
+    <string name="about_howtosetup_link">here</string>
+    <string name="settings">Settings for</string>
+    <string name="insert_success">Successfully recorded</string>
+    <string name="update_success">Successfully updated</string>
+    <string name="title">MapMint4ME</string>
+    <string name="description">Import, Edit, Export</string>
     <!-- Slides -->
-    <string name="title_activity_welcome" translatable="false">Home Screen</string>
-    <string name="next" translatable="false">NEXT</string>
-    <string name="skip" translatable="false">SKIP</string>
-    <string name="start" translatable="false">GOT IT</string>
-    <string name="introduction" translatable="false"><![CDATA[<ul>
+    <string name="title_activity_welcome">Home Screen</string>
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
+    <string name="introduction"><![CDATA[<ul>
                     <li><b>Import your data</b><p>To get started, you need to configure a MapMint server from which you will be able to download a local copy of your data for offline editing.</p></li>
                     <li><b>Editing data in the field</b><p>Either with or without internet connectivity, you can collect the data you want in the field.</p></li>
                     <li><b>Export your data</b><p>At the end of your field work or once you have internet connectivity, simply click the export button within the Export module to post your records to the MapMint server!</p></li>
                 </ul>]]></string>
-    <string name="slide_1_title" translatable="false">Import</string>
-    <string name="slide_1_desc" translatable="false">Firstly, download your data using the Import module!</string>
-    <string name="slide_2_title" translatable="false">MapMint server</string>
-    <string name="slide_2_desc" translatable="false">As a minimum, you will need at least one MapMint server configured!</string>
-    <string name="slide_3_title" translatable="false">Server settings</string>
-    <string name="slide_3_desc" translatable="false">Configure your application to access the MapMint server!</string>
-    <string name="slide_4_title" translatable="false">MapMint4ME is easy</string>
-    <string name="slide_4_desc" translatable="false"> Then click the Add server button!</string>
-    <string name="slide_5_title" translatable="false">Import data</string>
-    <string name="slide_5_desc" translatable="false" >Press the Import button and wait for your data to download.</string>
-    <string name="slide_6_title" translatable="false">Edit data</string>
-    <string name="slide_6_desc" translatable="false">Use the Edit module to collect your data in the field.</string>
-    <string name="slide_7_title" translatable="false">Export</string>
-    <string name="slide_7_desc" translatable="false">Use the Export module to post your data back to the MapMint server.</string>
-    <string name="slide_8_title" translatable="false">Use it</string>
-    <string name="slide_8_desc" translatable="false">You should be ready to start using the MapMint4ME application.</string>
-    <string name="play_again_desc" translatable="false">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
-    <string name="play_again" translatable="false">Play Again</string>
+    <string name="slide_1_title">Import</string>
+    <string name="slide_1_desc">Firstly, download your data using the Import module!</string>
+    <string name="slide_2_title">MapMint server</string>
+    <string name="slide_2_desc">As a minimum, you will need at least one MapMint server configured!</string>
+    <string name="slide_3_title">Server settings</string>
+    <string name="slide_3_desc">Configure your application to access the MapMint server!</string>
+    <string name="slide_4_title">MapMint4ME is easy</string>
+    <string name="slide_4_desc">Then click the Add server button!</string>
+    <string name="slide_5_title">Import data</string>
+    <string name="slide_5_desc">Press the Import button and wait for your data to download.</string>
+    <string name="slide_6_title">Edit data</string>
+    <string name="slide_6_desc">Use the Edit module to collect your data in the field.</string>
+    <string name="slide_7_title">Export</string>
+    <string name="slide_7_desc">Use the Export module to post your data back to the MapMint server.</string>
+    <string name="slide_8_title">Use it</string>
+    <string name="slide_8_desc">You should be ready to start using the MapMint4ME application.</string>
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
     <!-- /Slides -->
-
-
-
-
-    <string name="ok" translatable="false">OK</string>
-
-    <string name="need_permission" translatable="false">Camera permission is needed to run this application</string>
-
-    <string name="not_support" translatable="false">This device does not support AR. </string>
-
-    <string name="action_1" translatable="false" >Delete</string>
-    <string name="action_2" translatable="false">Set as first</string>
-    <string name="action_3" translatable="false">Horizontal move</string>
-    <string name="action_4" translatable="false">Vertical move</string>
-
-    <string name="action_1_toast" translatable="false">Remove this cube.</string>
-    <string name="action_2_toast" translatable="false">Reorder and set this cube to the first.</string>
-    <string name="action_3_toast" translatable="false">Move on x and z axis.</string>
-    <string name="action_4_toast" translatable="false">Move on y axis.</string>
 </resources>
